feat(unidbg-sign): 🎉 红果脱机签名攻克 —— 跨app签名链路
不破红果自身 metasec VM(OLLVM+VM 防静态),改用同后端番茄海外签名器跨 app 签名:
fqnovel 网关只验签名有效性、不做 app↔证书强绑定,故用番茄海外 metasec(offset 0x168c80,
unidbg 里能产真签名)给红果 API 签名,带红果 token 即被服务器接受。

- FqTrace 新增 serve 常驻 HTTP 签名服务(协议同原 frida 签名服务)+ signMap(JSON 输出)
- hongguo.py 零改动:export SIGN_SERVER 即脱离红果 app/frida
- 实测 search/multi_video_model code=0,拿到 1080p 真实 CDN 直链(标准 MP4)
- hook_registernatives.js 改用 JNIEnv 表索引 hook(更可靠)
- gitignore 排除 capture 子目录二进制依赖物

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>